link to style.css

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brasileirão SERIE A</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <div>
-      <div class="row-navegaçoes-outros-serviços">
-          <nav class="navbar navbar-expand-lg">
+          <nav class="navbar navbar-expand-lg no-padding-y">
                 <div class="container-fluid d-flex">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -46,15 +46,13 @@
                       </ul>
                   </div>
                 </div>
-              </div>
-            </nav>
+          </nav>
       </div>
-    </div>
 
     <!-- row-menu-search -->
-    <div class="row">
-        <nav class="navbar navbar-expand-lg green-bg-header">
-            <div class="col">
+    <div class="row green-bg-header">
+        <nav class="navbar navbar-expand-lg font-color-white">
+            <div class="col ">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                   <a class="nav-link" href="#">
@@ -77,7 +75,7 @@
               </ul>
             </div>
             <div class="col">
-              <div class="brasileira-txt">
+              <div class="brasileirao-txt">
                   BRASILEIRÃO SÉRIE A
               </div>
             </div>
@@ -95,29 +93,27 @@
         </div>
       </nav>
     </div>
-    <div class="row-item-header-list">
-        <nav class="navbar navbar-expand-lg green-bg-header">
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link" href="#">classificação</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">g1</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link">ge</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link">gshow</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link">globoplay</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-    </div>
+    
+     <nav class="navbar navbar-expand-lg green-bg-header">
+         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+             <li class="nav-item font-color-white">
+               <a class="nav-link" href="#">classificação</a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link" href="#">g1</a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link">ge</a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link">gshow</a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link">globoplay</a>
+             </li>
+           </ul>
+         </div>
+    </nav>
 </body>
 </html>
