--- a/index.html
+++ b/index.html
@@ -10,34 +10,34 @@
 <body>
     <div>
           <nav class="navbar navbar-expand-lg no-padding-y">
-                <div class="container-fluid d-flex">
-                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                      <a class="nav-link globo-com" href="#">globo.com</a>
+                <div class="container-fluid d-flex ">
+                  <ul class="navbar-nav item">
+                    <li class="nav-item globo-com">
+                      <a class="nav-link" style="color: unset;" href="#">globo.com</a>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link g1" href="#">g1</a>
+                    <li class="nav-item g1">
+                      <a class="nav-link" style="color: unset;" href="#">g1</a>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link ge">ge</a>
+                    <li class="nav-item ge">
+                      <a class="nav-link" style="color: unset;">ge</a>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link gshow">gshow</a>
+                    <li class="nav-item gshow">
+                      <a class="nav-link" style="color: unset;">gshow</a>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link globoplay">globoplay</a>
+                    <li class="nav-item globoplay">
+                      <a class="nav-link" style="color: unset;">globoplay</a>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link cartola">cartola</a>
+                    <li class="nav-item cartola">
+                      <a class="nav-link" style="color: unset;">cartola</a>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link sportv">sportv</a>
+                    <li class="nav-item sportv">
+                      <a class="nav-link" style="color: unset;">sportv</a>
                     </li>
                   </ul>
                   <div class="d-flex" role="search">
                       <ul class= "navbar-nav me-auto mb-2 mb-lg-0">
-                          <li class="nav-item">assine aqui</li>
-                          <li class="nav-item">
+                          <li class="nav-item padding-x item-left">assine aqui</li>
+                          <li class="nav-item padding-x item-left">
                               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                                   <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
                                 </svg>
@@ -50,24 +50,24 @@
       </div>
 
     <!-- row-menu-search -->
-    <div class="row green-bg-header">
-        <nav class="navbar navbar-expand-lg font-color-white">
+    <div class="row green-bg-header no-margin-x">
+        <nav class="navbar navbar-expand-lg">
             <div class="col ">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link" href="#">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0 disp-flex">
+                <li class="nav-item font-color-white">
+                  <a class="nav-link no-padding-y" href="#">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="fill: white;" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                           <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
                       </svg>
-                      <span class="menu-txt">MENU</span>
+                      <span class="menu-txt font-color-white">MENU</span>
                   </a>
                 </li>
                 <li class="nav-item ge-txt">
-                  <a class="nav-link" href="#">GE</a>
+                  <a class="nav-link no-padding-y font-color-white" href="#">ge</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-shield" viewBox="0 0 16 16">
+                  <a class="nav-link no-padding-y">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="White" class="bi bi-shield" viewBox="0 0 16 16">
                           <path d="M5.338 1.59a61 61 0 0 0-2.837.856.48.48 0 0 0-.328.39c-.554 4.157.726 7.19 2.253 9.188a10.7 10.7 0 0 0 2.287 2.233c.346.244.652.42.893.533q.18.085.293.118a1 1 0 0 0 .101.025 1 1 0 0 0 .1-.025q.114-.034.294-.118c.24-.113.547-.29.893-.533a10.7 10.7 0 0 0 2.287-2.233c1.527-1.997 2.807-5.031 2.253-9.188a.48.48 0 0 0-.328-.39c-.651-.213-1.75-.56-2.837-.855C9.552 1.29 8.531 1.067 8 1.067c-.53 0-1.552.223-2.662.524zM5.072.56C6.157.265 7.31 0 8 0s1.843.265 2.928.56c1.11.3 2.229.655 2.887.87a1.54 1.54 0 0 1 1.044 1.262c.596 4.477-.787 7.795-2.465 9.99a11.8 11.8 0 0 1-2.517 2.453 7 7 0 0 1-1.048.625c-.28.132-.581.24-.829.24s-.548-.108-.829-.24a7 7 0 0 1-1.048-.625 11.8 11.8 0 0 1-2.517-2.453C1.928 10.487.545 7.169 1.141 2.692A1.54 1.54 0 0 1 2.185 1.43 63 63 0 0 1 5.072.56"/>
                       </svg>
                   </a>
@@ -75,13 +75,13 @@
               </ul>
             </div>
             <div class="col">
-              <div class="brasileirao-txt">
+              <div class="brasileirao-txt font-color-white">
                   BRASILEIRÃO SÉRIE A
               </div>
             </div>
-            <form class="col d-flex" role="search">
+            <form class="col d-flex disp-flex search-pos" role="search">
                 <span>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-search" viewBox="0 0 16 16">
                         <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
                       </svg>
                 </span>
@@ -97,20 +97,20 @@
      <nav class="navbar navbar-expand-lg green-bg-header">
          <div class="collapse navbar-collapse" id="navbarSupportedContent">
            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-             <li class="nav-item font-color-white">
-               <a class="nav-link" href="#">classificação</a>
+             <li class="nav-item">
+               <a class="nav-link no-padding-y font-color-white low-opacity" href="#">classificação</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="#">g1</a>
+               <a class="nav-link no-padding-y font-color-white low-opacity" href="#">g1</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link">ge</a>
+               <a class="nav-link no-padding-y font-color-white low-opacity">ge</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link">gshow</a>
+               <a class="nav-link no-padding-y font-color-white low-opacity">gshow</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link">globoplay</a>
+               <a class="nav-link no-padding-y font-color-white low-opacity">globoplay</a>
              </li>
            </ul>
          </div>
