posicionamento melhorado da tabela e lista de jogos

--- a/index.html
+++ b/index.html
@@ -117,37 +117,42 @@
     </nav>
 
 
-    <div class="info-box">
-      <section>
-        <div class="table-box">
-            <h2>TABELA</h2>
-            <div class="overflow">
-                <div class="table-size">
-                    <table class="table" id="table">
-                        <thead>
-                            <tr>
-                                <th style="width: 20px ;"></th>
-                                <th style="width:200px;" class="teams">classificação</th>
-                                <th style="width:70px" class="">p</th>
-                                <th style="width:70px">j</th>
-                                <th style="width:70px" class="">v</th>
-                                <th style="width:70px">e</th>
-                                <th style="width:70px" class="">d</th>
-                                <th style="width:70px">GP</th>
-                                <th style="width:70px" class="">GC</th>
-                                <th style="width:70px">SG</th>
-                                <th style="width:70px" class="">%</th>
-                                <th style="width:350px">ÚlT. Jogo</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                        </tbody>
-                    </table>
-                </div>
+    <div class="container-fluid justify-center flex">
+      <div class="col-6 pm-3">
+        <section>
+          <div class="table-box">
+              <h2>TABELA</h2>
+              <div class="overflow">
+                  <div class="table-size">
+                      <table class="table" id="table">
+                          <thead>
+                              <tr>
+                                  <th style="width: 20px ;"></th>
+                                  <th style="width:200px;" class="teams">classificação</th>
+                                  <th style="width:70px" class="">p</th>
+                                  <th style="width:70px">j</th>
+                                  <th style="width:70px" class="">v</th>
+                                  <th style="width:70px">e</th>
+                                  <th style="width:70px" class="">d</th>
+                                  <th style="width:70px">GP</th>
+                                  <th style="width:70px" class="">GC</th>
+                                  <th style="width:70px">SG</th>
+                                  <th style="width:70px" class="">%</th>
+                                  <th style="width:350px">ÚlT. Jogo</th>
+                              </tr>
+                          </thead>
+                          <tbody>
+                          </tbody>
+                      </table>
+                  </div>
+              </div>
             </div>
-          </div>
-        </section>
-        <div class="line"></div>
+          </section>
+      </div>
+
+      <div class="line"></div>
+
+      <div class="col-3">
         <section>
           <div class="games">
               <h2>JOGOS</h2>
@@ -175,6 +180,7 @@
           </div>
       </div>    
     </section>
+  </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="javascript/script.js"></script>
 </body>
