Melhorias na responsividade, e organização da barra de  busca.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="row green-bg-header no-margin-x">
         <nav class="navbar navbar-expand-sm">
             <div class="col ">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0 disp-flex align-center">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0 align-center">
                 <li class="nav-item font-color-white ">
                   <a class="nav-link no-padding-y d-flex align-center" href="#">
                       <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" style="fill: white;" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
@@ -79,22 +79,24 @@
             </div>
             <div class="col">
               <div class="brasileirao-txt font-color-white">
-                  BRASILEIRÃO SÉRIE A
+                  BRASILEIRÃO
               </div>
             </div>
-            <form class="col d-flex disp-flex search-pos" role="search">
-                <span>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-search" viewBox="0 0 16 16">
-                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
-                      </svg>
-                </span>
-                <span>
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                </span>
-            </form>
-          </div>
-        </div>
-      </nav>
+            <div class="col">
+              <div class="col-8 offset-3">
+                <form class="col d-flex disp-flex search-pos search-background" role="search">
+                    <span>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="30" fill="white" class="bi bi-search" viewBox="0 -3 16 16">
+                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                          </svg>
+                    </span>
+                    <span>
+                        <input class="form-control me-2 search-input" type="search" placeholder="Search" aria-label="Search">
+                    </span>
+                </form>
+              </div>
+            </div>
+        </nav>
     </div>
     
      <nav class="navbar navbar-expand-lg green-bg-header margin-bottom">
@@ -121,7 +123,7 @@
 
 
     <div class="container-fluid justify-center flex">
-      <div class="col-6 pm-3">
+      <div class="col-12 col-lg-6 col-xl-6">
         <section>
           <div class="table-box">
               <h2>TABELA</h2>
@@ -155,7 +157,7 @@
 
       <div class="line"></div>
 
-      <div class="col-4">
+      <div class="col-12 col-lg-5 col-xl-4">
         <section>
           <div class="container-fluid">
               <h2>JOGOS</h2>
