--- a/index.html
+++ b/index.html
@@ -106,18 +106,18 @@
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
-            <ul class="Offcanvas-links">
-              <li>
-                <a href="#">Brasileirão</a>
+            <ul class="navbar-nav">
+              <li class="nav-item font-size-medium">
+                <a class="nav-link" href="#">Brasileirão</a>
               </li>
-              <li>
-                <a href="#">agenda</a>
+              <li class="nav-item font-size-medium">
+                <a class="nav-link" href="#">agenda</a>
               </li>
-              <li>
-                <a href="#">times</a>
+              <li class="nav-item font-size-medium">
+                <a class="nav-link" href="#">times</a>
               </li>
-              <li>
-                <a href="#">tabela</a>
+              <li class="nav-item font-size-medium">
+                <a class="nav-link" href="#">tabela</a>
               </li>
             </ul>
           </div>
@@ -127,20 +127,20 @@
         <nav class="navbar navbar-expand-lg green-bg-header margin-bottom">
          <div class="" id="navbarSupportedContent">
            <ul class="navbar-nav d-flex me-auto flex-row padding-x">
-             <li class="nav-item">
+             <li class="nav-item ">
                <a class="nav-link no-padding-y font-color-white low-opacity font-size-medium" href="#">classificação</a>
              </li>
-             <li class="nav-item">
-               <a class="nav-link no-padding-y font-color-white low-opacity font-size-medium" href="#">g1</a>
+             <li class="nav-item ">
+               <a class="nav-link no-padding-y font-color-white low-opacity font-size-medium" href="#">simulador</a>
+             </li>
+             <li class="nav-item ">
+               <a class="nav-link no-padding-y font-color-white low-opacity font-size-medium">vídeos</a>
+             </li>
+             <li class="nav-item ">
+               <a class="nav-link no-padding-y font-color-white low-opacity font-size-medium">seja&nbsp;pro</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link no-padding-y font-color-white low-opacity font-size-medium">ge</a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link no-padding-y font-color-white low-opacity font-size-medium">gshow</a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link no-padding-y font-color-white low-opacity font-size-medium">globoplay</a>
+               <a class="nav-link no-padding-y font-color-white low-opacity font-size-medium">VAR</a>
              </li>
            </ul>
          </div>
